--- a/03-post-process/output-plots-children/10-noise-term-diags.Rmd
+++ b/03-post-process/output-plots-children/10-noise-term-diags.Rmd
@@ -151,7 +151,7 @@ plot_proc_qresid = function(qresid_param, year = ts_yrs, pop = NULL, origin = NU
   first_last_mn_diff_post = mn_post_last - mn_post_first
   
   # calculate posterior summaries of standardized qresidual time series
-  qresid = apply(qresid_post, 2, function(x) c(mean = mean(x), sd = sd(x), quantile(x, c(0.5, 0.025, 0.975))))
+  qresid = apply(qresid_post, 2, function(x) c(mean = mean(x), sd = sd(x), quantile(x, c(0.5, 0.025, 0.975, 0.25, 0.75))))
   
     # set the y-axis limits: leave room at top for legend
   ylim = c(0,1.3)
@@ -174,8 +174,9 @@ plot_proc_qresid = function(qresid_param, year = ts_yrs, pop = NULL, origin = NU
   lines(x = all_yrs[y_ind[y_last]], y = rep(mean(mn_post_last), length(y_last)), col = "blue", lty = 3, lwd = 2)
   
   # draw the noise time series: mean and 95% CRI
-  segments(all_yrs[observable], qresid["2.5%",], all_yrs[observable], qresid["97.5%",], col = "red")
-  points(qresid["mean",] ~ all_yrs[observable], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  segments(all_yrs[observable], qresid["2.5%",], all_yrs[observable], qresid["97.5%",], col = "salmon")
+  segments(all_yrs[observable], qresid["25%",], all_yrs[observable], qresid["75%",], col = "salmon", lwd = 4)
+  points(qresid["mean",] ~ all_yrs[observable], pch = 21, col = "red", bg = "salmon", cex = 1.25)
   
   # draw legend that shows estimate summaries
   usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
@@ -513,14 +514,14 @@ plot_obs_qresid = function(qresid_param, year = ".+", pop = NULL, origin = NULL,
   sd_post = apply(qresid_post, 1, sd)
   
   # calculate posterior summaries of qresidual time series
-  qresid = apply(qresid_post, 2, function(x) c(mean = mean(x), sd = sd(x), quantile(x, c(0.5, 0.025, 0.975))))
+  qresid = apply(qresid_post, 2, function(x) c(mean = mean(x), sd = sd(x), quantile(x, c(0.5, 0.025, 0.975, 0.25, 0.75))))
   
   # place qresiduals at correct place in a time series
   # ie., insert missing values
-  empty = matrix(NA, nrow = 5, ncol = length(obs_qresid_yrs))
+  empty = matrix(NA, nrow = 7, ncol = length(obs_qresid_yrs))
   empty[,y_ind] = qresid
   qresid = empty[,observable]
-  rownames(qresid) = c("mean", "sd", "50%", "2.5%", "97.5%")
+  rownames(qresid) = c("mean", "sd", "50%", "2.5%", "97.5%", "25%", "75%")
   empty_names = rep(NA, length(obs_qresid_yrs))
   empty_names[y_ind] = colnames(qresid_post)
   
@@ -546,8 +547,9 @@ plot_obs_qresid = function(qresid_param, year = ".+", pop = NULL, origin = NULL,
   axis(side = 2, at = seq(0, 1, 0.25), labels = TRUE)
 
   # draw the noise time series: mean and 95% CRI
-  segments(all_yrs[observable], qresid["2.5%",], all_yrs[observable], qresid["97.5%",], col = "red")
-  points(qresid["mean",] ~ all_yrs[observable], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  segments(all_yrs[observable], qresid["2.5%",], all_yrs[observable], qresid["97.5%",], col = "salmon")
+  segments(all_yrs[observable], qresid["25%",], all_yrs[observable], qresid["75%",], col = "salmon", lwd = 4)
+  points(qresid["mean",] ~ all_yrs[observable], pch = 21, col = "red", bg = "salmon", cex = 1.25)
   
   # draw reference line at 25%, 50%, and 75% quantiles
   abline(h = c(0.25, 0.5, 0.75), lty = 3, col = "grey", lwd = 2)
