Add output for new params in output plots
* new kappa parameters
* year 0 residual

--- a/03-post-process/output-plots-children/02-mcmc-diags.Rmd
+++ b/03-post-process/output-plots-children/02-mcmc-diags.Rmd
@@ -81,8 +81,8 @@ summs_out = NULL
 
 # parr recruitment
 L1 = "Egg-to-Parr Survival"
-L2 = c("BH Productivity", "BH Capacity", "Capacity vs. Habitat Slope", "Capacity vs. slope SD", "Process SD", "Among-pop Correlation", "Realized")
-match = c("alpha", "^beta[", "^lambda$", "sig_lbeta", "sig_Lphi_E_Pb", "rho_Lphi_E_Pb", "^phi_E_Pb[")
+L2 = c("BH Productivity", "BH Capacity", "Capacity vs. Habitat Slope", "Capacity vs. slope SD", "White Noise Process SD", "AR(1) Coefficient", "Initial Residual", "Among-pop Correlation", "Realized")
+match = c("alpha", "^beta[", "^lambda$", "sig_lbeta", "sig_Lphi_E_Pb", "kappa_phi_E_Pb", "Lphi_E_Pb_resid[1,", "rho_Lphi_E_Pb", "^phi_E_Pb[")
 tmp_diags = lapply(1:length(match), function(i) summarize_posterior(match[i], L1 = L1, L2 = L2[i]))
 tmp_summ = lapply(tmp_diags, function(i) summarize_diags(i))
 diags_out = rbind(diags_out, do.call(rbind, tmp_diags))
